# backend-technical-test

./: .env.example  APP_README.md  Dockerfile  Makefile  README.md  docker-compose.yml  nginx_config.conf  openapi.yaml  postman-tests.json  pyproject.toml  requirements.txt
.github/workflows/: backend.yml  pythonapp.yml  tests.yml
docker_scripts/: entrypoint.sh  initdb.sh  run_test_coverage.sh  run_unit_tests.sh
k8s/: backendapi-deployment.yml  postgres-deployment.yml  postgres-volume.yml  secrets.yml
scripts/: create_db.py
src/: config.py  errors.py  main.py  models.py  schemas.py  utils.py
tests/: conftest.py  test_apis.py  test_main.py
