[tool.poetry]
name = "backend-technical-test"
version = "0.1.0"
description = ""
authors = ["ehi <ehiagheaigg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.32"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
